[gd_scene load_steps=8 format=3 uid="uid://b8ss7pitoj2qr"]

[ext_resource type="Script" uid="uid://cbw8jcw4xuynk" path="res://Scenes/Pit/pit.gd" id="1_icnxl"]
[ext_resource type="Texture2D" uid="uid://cvgfcx2l4xemx" path="res://Scenes/Pit/Pit.png" id="2_kkf1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80hje"]
size = Vector2(60, 27)

[sub_resource type="Animation" id="Animation_sul61"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_i8kqq"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_vhlp8"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oo1x5"]
_data = {
&"RESET": SubResource("Animation_sul61"),
&"closed": SubResource("Animation_i8kqq"),
&"open": SubResource("Animation_vhlp8")
}

[node name="Pit" type="Node2D"]
script = ExtResource("1_icnxl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kkf1a")
hframes = 8
vframes = 3
frame = 9

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_80hje")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oo1x5")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
